# modules/headless-vitamins/headless-vitamins-impl/src/main/java/com/dnebinger/headless/vitamins/internal/resource/v1_0/OpenAPIResourceImpl.java
@@ -4,24 +4,19 @@ import com.liferay.portal.vulcan.resource.OpenAPIResource;
 
 import io.swagger.v3.oas.annotations.OpenAPIDefinition;
 import io.swagger.v3.oas.annotations.info.Info;
+import io.swagger.v3.oas.annotations.info.License;
 
 import java.util.HashSet;
 import java.util.Set;
 
 import javax.annotation.Generated;
 
-import javax.servlet.ServletConfig;
-
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
-import javax.ws.rs.core.Application;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.HttpHeaders;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
-import javax.ws.rs.core.UriInfo;
 
 import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
@@ -36,7 +31,7 @@ import org.osgi.service.component.annotations.Reference;
 )
 @Generated("")
 @OpenAPIDefinition(
-	info = @Info(description = "API for accessing Vitamin details.", title = "Headless Vitamins", version = "v1.0")
+	info = @Info(description = "API for accessing Vitamin details.", license = @License(name = "Apache 2.0", url = "http://www.apache.org/licenses/LICENSE-2.0.html"), title = "Headless Vitamins", version = "v1.0")
 )
 @Path("/v1.0")
 public class OpenAPIResourceImpl {
@@ -44,18 +39,11 @@ public class OpenAPIResourceImpl {
 	@GET
 	@Path("/openapi.{type:json|yaml}")
 	@Produces({MediaType.APPLICATION_JSON, "application/yaml"})
-	public Response getOpenAPI(
-			@Context HttpHeaders httpHeaders, @Context UriInfo uriInfo,
-			@PathParam("type") String type)
+	public Response getOpenAPI(@PathParam("type") String type)
 		throws Exception {
 
-		return _openAPIResource.getOpenAPI(
-			_application, httpHeaders, _resourceClasses, _servletConfig, type,
-			uriInfo);
+		return _openAPIResource.getOpenAPI(_resourceClasses, type);
 	}
-
-	@Context
-	private Application _application;
 
 	@Reference
 	private OpenAPIResource _openAPIResource;
@@ -67,8 +55,5 @@ public class OpenAPIResourceImpl {
 			add(OpenAPIResourceImpl.class);
 		}
 	};
-
-	@Context
-	private ServletConfig _servletConfig;
 
 }
